--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "cypress": "^13.6.6",
+    "cypress-real-events": "^1.12.0",
     "typescript": "^5.3.3"
   },
   "name": "todo-cy",
